# ratl

./: .codecov.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  conan_install.sh  conanfile.txt  run_build.sh  zipper.sh
CMakeModules/: CodeCoverage.cmake  ConanUtils.cmake  SourcesDirectories.cmake
examples/: CMakeLists.txt
examples/basicserver/: CMakeLists.txt  main.cpp
server-impls/: CMakeLists.txt
server-impls/ratl-asio/: CMakeLists.txt
server-impls/ratl-asio/src/main/: CMakeLists.txt
server-impls/ratl-asio/src/main/cpp/: CMakeLists.txt
server-impls/ratl-asio/src/main/cpp/ratl/: CMakeLists.txt
server-impls/ratl-asio/src/main/cpp/ratl/server/: CMakeLists.txt
server-impls/ratl-asio/src/main/cpp/ratl/server/asio/: BoostASIONetIO.cpp  BoostASIONetIO.h  CMakeLists.txt
server-impls/ratl-mongoose/: CMakeLists.txt
server-impls/ratl-mongoose/src/main/: CMakeLists.txt
server-impls/ratl-mongoose/src/main/cpp/: CMakeLists.txt
server-impls/ratl-mongoose/src/main/cpp/mongoose/: CMakeLists.txt  mongoose.c  mongoose.h
server-impls/ratl-mongoose/src/main/cpp/ratl/server/: CMakeLists.txt
server-impls/ratl-mongoose/src/main/cpp/ratl/server/mongoose/: CMakeLists.txt  MongooseNetIO.cpp  MongooseNetIO.h
src/: CMakeLists.txt
src/main/: CMakeLists.txt
src/main/cpp/: CMakeLists.txt
src/main/cpp/ratl/: CMakeLists.txt  json.h
src/main/cpp/ratl/rest/: CMakeLists.txt  Request.cpp  Request.h  Resource.cpp  Resource.h  Response.h  RestAPI.cpp  RestAPI.h  Router.cpp  Router.h
src/main/cpp/ratl/router/: CMakeLists.txt  RTrie.cpp  RTrie.h  RTrieException.cpp  RTrieException.h  RTrieMatch.cpp  RTrieMatch.h  RTrieNode.cpp  RTrieNode.h
src/main/cpp/ratl/server/: CMakeLists.txt  NetIO.cpp  NetIO.h  RequestHandler.h  RestServer.cpp  RestServer.h
src/test/: CMakeLists.txt  conanfile.txt
src/test/cpp/: CMakeLists.txt  main.cpp
src/test/cpp/mock/: CMakeLists.txt  MockNetIO.cpp  MockNetIO.h
src/test/cpp/ratl/: CMakeLists.txt
src/test/cpp/ratl/rest/: CMakeLists.txt  RequestTest.cpp  ResourceTest.cpp  RestAPITest.cpp  RouterTest.cpp
src/test/cpp/ratl/router/: CMakeLists.txt  RTrieTest.cpp
src/test/cpp/ratl/server/: CMakeLists.txt  RestServerTest.cpp
